# Lab2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
data/: store.kv
src/log_structured_file_io/: main.py
tests/: __init__.py  conftest.py  test_cli.py  test_data.py  test_random.py
